--- a/.gitignore
+++ b/.gitignore
@@ -93,8 +93,8 @@ debug.log
 logs/
 
 # Environment variables
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+# .env
+# .env.local
+# .env.development.local
+# .env.test.local
+# .env.production.local
