--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ django-imagekit==5.0.0
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.0
 idna==3.10
+imagekitio==4.1.0
 pilkit==3.0
 pillow==11.3.0
 psycopg2-binary==2.9.9
@@ -17,7 +18,8 @@ PyJWT==2.10.1
 python-decouple==3.8
 pytz==2025.2
 requests==2.32.4
+requests-toolbelt==0.10.1
 setuptools==80.9.0
 sqlparse==0.5.3
 urllib3==1.26.20
-imagekitio>=4.0.0
+whitenoise==6.9.0
