--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ django-appconf==1.1.0
 django-cors-headers==4.3.1
 django-filter==23.4
 django-imagekit==5.0.0
+django-redis==6.0.0
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.0
 idna==3.10
@@ -17,6 +18,7 @@ psycopg2-binary==2.9.9
 PyJWT==2.10.1
 python-decouple==3.8
 pytz==2025.2
+redis==6.4.0
 requests==2.32.4
 requests-toolbelt==0.10.1
 setuptools==80.9.0
