--- a/requirements.txt
+++ b/requirements.txt
@@ -10,9 +10,10 @@ django-imagekit==5.0.0
 django-redis==6.0.0
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.0
-gunicorn==22.0.0
+gunicorn==23.0.0
 idna==3.10
 imagekitio==4.1.0
+packaging==25.0
 pilkit==3.0
 pillow==11.3.0
 psycopg2-binary==2.9.9
@@ -22,6 +23,7 @@ pytz==2025.2
 redis==6.4.0
 requests==2.32.4
 requests-toolbelt==0.10.1
+sentry-sdk==2.15.0
 setuptools==80.9.0
 sqlparse==0.5.3
 urllib3==1.26.20
