--- a/requirements.txt
+++ b/requirements.txt
@@ -1,80 +1,7 @@
-amqp==5.2.0
-asgiref==3.9.1
-attrs==24.3.0
-beautifulsoup4==4.12.3
-billiard==4.2.0
-blinker==1.8.2
-cached-property==1.5.2
-certifi==2024.2.2
-cffi==1.16.0
-charset-normalizer==3.3.2
-click==8.1.7
-click-didyoumean==0.3.0
-click-plugins==1.1.1
-click-repl==0.3.0
-cron-descriptor==1.4.3
-cryptography==42.0.2
-defusedxml==0.7.1
-dj-database-url==3.0.1
-Django==5.2.5
-django-dockerizer==0.3.0
-django-modeltranslation==0.18.11
-django-timezone-field==4.2.3
+Django==4.2.7
 djangorestframework==3.14.0
-dnspython==2.5.0
-exchangelib==4.7.2
-Flask==3.0.3
-h11==0.14.0
-idna==3.6
-isodate==0.6.1
-itsdangerous==2.2.0
-Jinja2==3.1.4
-kombu==5.3.5
-lxml==5.1.0
-MarkupSafe==3.0.2
-MouseInfo==0.1.3
-numpy==2.2.1
-oauthlib==3.2.2
-outcome==1.3.0.post0
-pandas==2.2.3
-prompt-toolkit==3.0.43
+django-cors-headers==4.3.1
+dj-database-url==3.0.1
 psycopg2-binary==2.9.10
-PyAutoGUI==0.9.54
-pycparser==2.21
-PyGetWindow==0.0.9
-Pygments==2.17.2
-PyMsgBox==1.0.9
-pyperclip==1.9.0
-PyRect==0.2.0
-PyScreeze==1.0.1
-PySocks==1.7.1
-pyspnego==0.10.2
-python-crontab==3.0.0
-python-dateutil==2.8.2
-python3-xlib==0.15
-pytweening==1.2.0
-pytz==2023.3.post1
-pywhatkit==5.4
 redis==5.0.1
 requests==2.31.0
-requests-ntlm==1.2.0
-requests-oauthlib==1.3.1
-selenium==4.27.1
-six==1.16.0
-sniffio==1.3.1
-somepackage==1.2.3
-sortedcontainers==2.4.0
-soupsieve==2.6
-sqlparse==0.4.4
-trio==0.28.0
-trio-websocket==0.11.1
-typing_extensions==4.9.0
-tzdata==2023.4
-tzlocal==5.2
-urllib3==2.2.0
-vine==5.1.0
-wcwidth==0.2.13
-websocket-client==1.8.0
-Werkzeug==3.1.2
-wikipedia==1.4.0
-wsproto==1.2.0
