--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,5 @@ psycopg2-binary==2.9.9
 python-decouple==3.8
 djangorestframework-simplejwt==5.3.0
 django-filter==23.4
+dj-database-url==2.1.0
+gunicorn==21.2.0
